# maxentnuc

./: .gitignore  README.md  environment.yml  pyproject.toml
demo/: config_demo.yaml  processed_contact_map.npy  run_demo.sh
figures/: README.md  condensability_to_bigwig.py  contact_map_plots.py  contact_map_processing.ipynb  contact_map_ps.py  contact_maps.py  correlation_length.py  density.ipynb  distance_scaling.ipynb  domains_search.ipynb  domains_search_capture.ipynb  domains_search_dbscan.ipynb  domains_search_interactions.ipynb  hierarchy.py  make_region_contact_maps.py  neighbor_balancing_synthetic.py  overview.ipynb  transcription.ipynb
figures/data/: domains.psf  domains_thresh.cool  domains_thresh.mcool  loops.psf  loops_thresh.cool  loops_thresh.mcool
maxentnuc/analysis/: README.md  analysis.py  analysis_orca.py  check_topology.py  convergence_analyzer.py  domain_analyzer.py  epigenetics_correlation.py  imaging.py  insulation.py  mei_analyzer.py  plot_convergence.py  track_data.py  visualize.py  visualize_domains.py
maxentnuc/simulation/: README.md  experimental_contacts.py  homopolymer.py  mei.py  model.py  optimizer.py  save_contact_map.py  simulated_contacts.py  submit.sh  upper_triangular.py
visualizations/: export_view.tcl  hierarchy.tcl  hierarchy_fbn2.tcl  ppm1g_main.tcl  view_settings.tcl
visualizations/systems/: ._ppm1g_zoomout_ins.tga  fbn2_chain.tcl  fbn2_dbscan.tcl  fbn2_ins.tcl  klf1_chain.tcl  klf1_dbscan.tcl  klf1_ins.tcl  nanog_chain.tcl  nanog_dbscan.tcl  nanog_ins.tcl  ppm1g_chain.tcl  ppm1g_dbscan.tcl  ppm1g_ins.tcl  sox2_ins.tcl  (+2 more)
(+8 files in other folders)
